--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </p>
               <div class="row mt-3">
                   <div class="col-md-6">
-                    <span>&emsp;&emsp;&emsp;<strong>Tehcnical Interests</strong></span>
+                    <span>&emsp;&emsp;&emsp;<strong>Technical Interests</strong></span>
                       <ul>
                           <li>Systems Design</li>
                           <li>Testing</li>
